--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-parallax-tilt": "^1.7.43",
     "react-tsparticles": "^2.1.0",
     "tachyons": "^4.12.0",
+    "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
