--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
